task8/5-istio-canary.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: canary-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - demo.local

---

kind: VirtualService
apiVersion: networking.istio.io/v1beta1
metadata:
  name: canary-vs
  namespace: default
spec:
  hosts:
    - demo.local
  gateways:
    - canary-gateway
  http:
    - route:
        - destination:
            host: canary.default.svc.cluster.local
            subset: prod-dr
          weight: 90
        - destination:
            host: canary.default.svc.cluster.local
            subset: dev-dr
          weight: 10
---
kind: DestinationRule
apiVersion: networking.istio.io/v1beta1
metadata:
  name: canary-dr
  namespace: default
spec:
  host: canary.default.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: RANDOM
  subsets:
    - labels:
        version: prod
      name: prod-dr
    - labels:
        version: dev
      name: dev-dr
