task8/5-webapp.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: canary
  labels:
    app.kubernetes.io/version: "1.16.0"
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: demo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: canary
  labels:
    app.kubernetes.io/version: "1.16.0"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo
  template:
    metadata:
      labels:
        app: demo
    spec:
      serviceAccountName: canary
      securityContext:
        {}
      containers:
        - name: demo
          securityContext:
            {}
          image: "titanlien/web:prod"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: canary-dev
  labels:
    app.kubernetes.io/version: "1.16.0"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo
  template:
    metadata:
      labels:
        app: demo
    spec:
      serviceAccountName: canary
      securityContext:
        {}
      containers:
        - name: demo
          securityContext:
            {}
          image: "titanlien/web:dev"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            {}
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: canary
  labels:
    app.kubernetes.io/version: "1.16.0"
    app: demo
spec:
  rules:
    - host: "demo.local"
      http:
        paths:
          - path: /
            backend:
              serviceName: canary
              servicePort: 8080
