task8/6-istio-canary.yaml
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: canary-vs
  namespace: default
spec:
  hosts:
    - canary.default.svc.cluster.local
  http:
    - route:
        - destination:
            host: canary.default.svc.cluster.local
            subset: prod-dr
          weight: 90
        - destination:
            host: canary.default.svc.cluster.local
            subset: dev-dr
          weight: 10
---
kind: DestinationRule
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: canary-dr
  namespace: default
spec:
  host: canary.default.svc.cluster.local
  subsets:
    - labels:
        version: prod
      name: prod-dr
    - labels:
        version: dev
      name: dev-dr
